# CASE-SWDEP

./: .gitignore  CASE_SWDEP.pro
CASE_SW/: CASE_SW.pro  CConnection.cpp  CConnection.h  CConnectionView.cpp  CConnectionView.h  CConnectionViewWidget.cpp  CConnectionViewWidget.h  CDataModel.cpp  CDataModel.h  CDataModelException.cpp  CDataModelException.h  CDetailedEntityView.cpp  CDetailedEntityView.h  CDetailedEntityWidget.cpp  CDetailedEntityWidget.h  CEntity.cpp  CEntity.h  CEntityItem.h  CEntityView.cpp  CEntityView.h  CForeignRow.cpp  CForeignRow.h  CLangWidget.cpp  CLangWidget.h  CLoadAndSaveWidget.cpp  CLoadAndSaveWidget.h  CMakeLists.txt  CModelView.h  CPluginInterface.h  CRow.cpp  CRow.h  CScriptGenerator.cpp  CScriptGenerator.h  CScrollArea.cpp  CScrollArea.h  CUniquesEditorWidget.cpp  CUniquesEditorWidget.h  CViewModel.cpp  CViewModel.h  cplugininterface.h  (+6 more)
CASE_SW/dialog/: CUniqueGroupDialog.cpp  CUniqueGroupDialog.h  CUniqueGroupDialog.ui  ChangeTableDialog.cpp  ChangeTableDialog.h  ChangeTableDialog.ui  ResizeDialog.cpp  ResizeDialog.h  ResizeDialog.ui  changetabledialog.cpp  cuniquegroupdialog.cpp  cuniquegroupdialog.h  cuniquegroupdialog.ui  resizedialog.cpp
CASE_SW/editor/: CRelationshipEditor.cpp  CRelationshipEditor.h  CRelationshipEditor.ui  CTableEditor.cpp  CTableEditor.h  CTableEditor.ui  crelationshipeditor.cpp  crelationshipeditor.h  crelationshipeditor.ui  ctableeditor.cpp  ctableeditor.ui
CASE_SW/main/: CPluginWindow.cpp  CPluginWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PModelWindow.cpp  PModelWindow.h  PModelWindow.ui  cpluginwindow.cpp  cpluginwindow.h  cpluginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pmodelwindow.cpp
CASE_SW/model/: CDataModel.cpp  CDataModel.h  CForeignRow.cpp  CForeignRow.h  CObject.cpp  CObject.h  CRelationship.cpp  CRelationship.h  CRow.cpp  CRow.h  CTable.cpp  CTable.h  CUniqueGroup.cpp  CUniqueGroup.h  IDataModel.h  IForeingRow.h  ITable.h  cdatamodel.cpp  cdatamodel.h  cforeignrow.cpp  cforeignrow.h  cobject.cpp  cobject.h  crelationship.cpp  crelationship.h  crow.cpp  crow.h  ctable.cpp  ctable.h  cuniquegroup.cpp  cuniquegroup.h  idatamodel.h  irow.h  itable.h
CASE_SW/rework/: CDataModel.cpp  CDataModel.h  CEntityItem.cpp  CEntityItem.h  CForeignRow.cpp  CForeignRow.h  CModelView.cpp  CModelView.h  CObject.cpp  CObject.h  CObjectItem.cpp  CObjectItem.h  CRelationship.cpp  CRelationship.h  CRelationshipEditor.cpp  CRelationshipEditor.h  CRelationshipItem.cpp  CRelationshipItem.h  CRow.cpp  CRow.h  CTable.cpp  CTable.h  CTableEditor.cpp  CTableEditor.h  CTableEditor.ui  CTableItem.cpp  (+12 more)
(+40 files in other folders)
